<resources>
    <string name="app_name">P03 Demo Simple Click</string>
    <string name="enterinput">Enter something</string>
    <string name="show">Display what user enters</string>
    <string name="display">Display</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="male">Male</string>
    <string name="female">Female</string>


</resources>